# abz_test_task

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
employees/: admin.py  filter.py  forms.py  models.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_remove_employees_employment_start_date.py  0002_rename_position_employees_employment_position_and_more.py  0003_alter_employees_start_date.py  0003_remove_employees_date_added.py  0004_alter_employees_employment_position_and_more.py  0004_remove_employees_position_remove_employees_salary.py  0005_alter_employees_name.py  0006_alter_employees_name.py  0007_alter_employees_employment_position_and_more.py  0008_employees_photo.py  0009_alter_employees_photo.py  0010_alter_employees_photo.py  0011_alter_employees_photo.py  0012_alter_employees_photo.py  0013_alter_employees_photo.py  0014_alter_employees_photo.py  0015_alter_employees_photo.py  0016_alter_employees_photo.py  0017_alter_employees_photo.py  0018_alter_employees_photo.py  0019_alter_employees_photo.py  0020_alter_employees_photo.py
employees/templates/: edit_form.html  employees_list.html  filter.html  filter_form.html  form.html  index.html  layout.html  old_version_filter.html
employees_catalog/: asgi.py  settings.py  urls.py  wsgi.py
employees_catalog/scripts/: factories.py
users/: urls.py  views.py
users/templates/: login.html  user_form.html
